Add OLS endpoints